pushed the latest code

--- a/app/globals.css
+++ b/app/globals.css
@@ -92,4 +92,8 @@ body,
   /* background-color: #eaa7ea; */
 }
 
+.cl-internal-180wb59 {
+  display: none;
+}
+
 @import "@uploadthing/react/styles.css";
